适配 BitComet v2.11 Beta2 [20241021] 的解封 API